# fastapi-order

./: README.md  pyproject.toml
app/: __init__.py
app/api/v1/router/: __init__.py  product_router.py
app/database/: sqlalchemy.py
app/dependency/: ioc_container.py
core/domains/product/enum/: product_enum.py
core/domains/product/repository/: product_repository.py
core/domains/product/service/: product_service.py
core/domains/product/service/response/: product_response.py
core/persistence/models/: order_model.py  order_product_model.py  product_model.py
tests/: conftest.py
tests/integration/repository/: test_product_repository.py
tests/integration/route/: test_product_route.py
tests/integration/service/: test_product_service.py
tests/seeder/: conftest.py
tests/seeder/factory/: __init__.py
