[tool.poetry]
name = "fastapi-order"
version = "0.1.0"
description = ""
authors = ["hsw0905 <hsw0905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
inject = "^5.2.0"
pydantic-settings = "^2.1.0"
uvloop = "^0.19.0"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
asgi-lifespan = "^2.1.0"
black = "^23.11.0"
factory-boy = "^3.3.0"
pytest-factoryboy = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
